# kolemak

./: .gitignore  CMakeLists.txt  Makefile  README.md
.claude/: settings.local.json
.github/workflows/: build.yaml
cmd/: changed.ahk  unchanged.ahk
docs/: en.md  ko.md
docs/en/: build.md  guide.md
docs/ko/: build.md  guide.md
ime/: CMakeLists.txt  build.bat
ime/src/: dll_main.c  edit_session.c  globals.c  hangul.c  key_handler.c  keymap.c  keymap.h  kolemak.def  kolemak.h  langbar.c  settings.c  settings.h  text_service.c  tray.c  tray.h
installer/: kolemak.iss
portable/: changed.ahk  kolemak.ahk
src/: dll_main.c  edit_session.c  globals.c  hangul.c  hangul.h  key_handler.c  keymap.c  keymap.h  kolemak.h  kolemak.rc  langbar.h  resource.h  settings.c  settings.h  text_service.c  tooltip.c  tooltip.h  tray.c  tray.h  version.h.in
test/: enter-key-test-results.md
